finishing up the project.

--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.24",
     "@fortawesome/free-brands-svg-icons": "^5.11.1",
     "@fortawesome/vue-fontawesome": "^0.1.7",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-dropdown-hover": "^4.2.0",
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
+    "nanobar": "^0.4.2",
     "popper.js": "^1.15.0",
     "scrollreveal": "^4.0.5",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
